src/objects/ServiceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CertificateName__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificatePassword__c</fullName>
        <label>Certificate Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HeaderName__c</fullName>
        <description>Select the Header name from ServiceHeaders settings</description>
        <inlineHelpText>Select the Header name from ServiceHeaders settings</inlineHelpText>
        <label>Header Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Set the below operation when Service configured with RESTService Strategy:
GET, PATCH, POST, DELETE, PUT</description>
        <inlineHelpText>Set the below operation when Service configured with RESTService Strategy:
GET, PATCH, POST, DELETE, PUT</inlineHelpText>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputClass__c</fullName>
        <label>Output Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingClass__c</fullName>
        <label>ProcessingClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>Allowed Values:
1. SOAPService
2. RESTService</description>
        <inlineHelpText>Allowed Values:
1. SOAPService
2. RESTService</inlineHelpText>
        <label>Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>If not set, default is 30,000. The maximum value can be set : 120,000</description>
        <inlineHelpText>If not set, default is 30,000. The maximum value can be set : 120,000</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Settings</label>
</CustomObject>